[package]
name = "my_blog"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = 0
incremental = true

[profile.release]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
mongodb = "2.0.1"
axum = "0.2.8"
axum-server = { version = "0.2.5", features = ["tls-rustls"] }
tokio = "1.12.0"
tower-http = { version = "0.1.1", features = ["full"] }
tower = "0.4.10"
async-trait = "0.1.51"
pin-project = "1.0.8"
rand = "0.8.4"
pulldown-cmark = "0.8.0"
askama = "0.10.5"
serde = "1.0.130"
serde_json = "1.0.68"
toml = "0.5.8"
jsonwebtoken = "7.2.0"
thiserror = "1.0.30"
anyhow = "1.0.44"
futures-util = "0.3.17"
chrono = "0.4.19"