[package]
name = "my_blog"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = 0
incremental = true

[profile.release]
incremental = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
mongodb = "2.0.1"
axum = "0.5.1"
axum-server = { version = "0.4.0", features = ["tls-rustls"] }
tokio = "1.17.0"
tower-http = { version = "0.2.5", features = ["full"] }
tower = "0.4.10"
async-trait = "0.1.51"
pin-project = "1.0.8"
rand = "0.8.4"
pulldown-cmark = "0.9.1"
askama = "0.11.1"
serde = "1.0.130"
serde_json = "1.0.68"
toml = "0.5.8"
jsonwebtoken = "8.1.0"
thiserror = "1.0.20"
anyhow = "1.0.44"
futures-util = "0.3.17"
chrono = "0.4.19"